code is updated with the deployed site 15/02: Satellite demonstration (partial), copy, minor functionality changes, all the functions are concentrated in utils instead of in the pages to make it cleaner

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@ other/*
 !other/resume.pdf
 !other/cover_letter.pdf
 productions/
-bucket/Sketchy/
+bucket/Sketchy/data
 sketchy_production/
-!sketchy_production/fastapi_sketchy.py
-!sketchy_production/Docekrfile
 .env
 .envrc
